Fix scroll on firefox

--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - 76px);
+  overflow-x: scroll;
 }
 
 .content-wrapper {
